--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Overwolf PUBG React App</title>
+    <title>PUBG POST MATCH STATS</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54625343-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-54625343-3');
+    </script>
+
   </head>
   <body>
     <noscript>
